apps/workloads/media/recyclarr/network-policy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: recyclarr-policy
spec:
  endpointSelector:
    matchLabels:
      app: recyclarr
  # ----=== Egress ===----
  egress:
    # === Allow access to services ===
    - toServices:
        - k8sService:
            serviceName: radarr-ui
            namespace: media
        - k8sService:
            serviceName: sonarr-tv-ui
            namespace: media
        - k8sService:
            serviceName: sonarr-anime-ui
            namespace: media
    # === Allow access to external for indexers ===
    - toEntities:
        - "world"
      toPorts:
        # Only allow HTTP/S for indexers
        - ports:
            - port: "443"
              protocol: TCP
